--- a/app-angular4/src/app/cadastro/cadastro.component.html
+++ b/app-angular4/src/app/cadastro/cadastro.component.html
@@ -3,32 +3,34 @@
   <hr>
   <div class="col-md-6">
     <ul class="lisst_group">
-      <li *ngFor="let item of listaEventos" 
-        (click)="selecionar(item)" class="list-group-item">
+      <li *ngFor="let item of listaEventos" (click)="selecionar(item)" class="list-group-item">
         <a [routerLink]="['/eventos']" [class.selecionado]="item===eventoSelecionado">{{item.descricao}}</a>
       </li>
     </ul>
+    <button type="button" (click)="novo()" class="btn btn-info">
+      <span class="glyphicon glyphicon-plus"></span>
+      Novo Evento
+    </button>
   </div>
 
   <div *ngIf="eventoSelecionado">
-  <div class="col-md-6">
-    <div class="form-group">
-      <label for="descricao">Descrição</label>
-      <input type="text" [(ngModel)]="eventoSelecionado.descricao"
-      class="form-control" id="descricao" name="descricao">
-    </div>
-    <div class="form-group">
-      <label for="data">Data</label>
-      <input type="text" [(ngModel)]="eventoSelecionado.data" 
-      class="form-control" id="data" name="data">
-    </div>
-    <div class="form-group">
-      <label for="preco">Preço</label>
-      <input type="text" [(ngModel)]="eventoSelecionado.preco" 
-      class="form-control" id="preco" name="preco">
-    </div>
-    <div class="form-group">
-      <button type="button" class="btn btn-info"><i class="glyphicon glyphicon-pencil "></i>incluir</button>
+    <div class="col-md-6">
+      <div class="form-group">
+        <label for="descricao">Descrição</label>
+        <input type="text" [(ngModel)]="eventoSelecionado.descricao" class="form-control" id="descricao" name="descricao">
+      </div>
+      <div class="form-group">
+        <label for="data">Data</label>
+        <input type="text" [(ngModel)]="eventoSelecionado.data" class="form-control" id="data" name="data">
+      </div>
+      <div class="form-group">
+        <label for="preco">Preço</label>
+        <input type="text" [(ngModel)]="eventoSelecionado.preco" class="form-control" id="preco" name="preco">
+      </div>
+      <div class="form-group">
+        <button type="button" (click)="incluir(eventoSelecionado)" 
+        class="btn btn-info"><i class="glyphicon glyphicon-pencil "></i>incluir</button>
+      </div>
     </div>
   </div>
 </div>
